Fix issue with width of draggable elements in Text when gap width is not equal 0

--- a/src/main/java/com/lorepo/icplayer/public/theme/player.css
+++ b/src/main/java/com/lorepo/icplayer/public/theme/player.css
@@ -335,7 +335,6 @@ hr, table, fieldset {
 }
 
 .ic_draggableGapEmpty{
-	width:100px;
 	border:1px solid gray;
 	display:inline-block;
 }
@@ -358,7 +357,6 @@ hr, table, fieldset {
 }
 
 .ic_draggableGapFilled{
-	width:100px;
 	display:inline-block;
 	border: 1px solid green;
 	background-color: PaleGreen;
